# yt-converter-python

./: .gitignore  CLAUDE.md  Gui.py  Readme.md  run_app.bat  youtube_converter.py  youtube_downloader.py
sidecar/: yt_dlp_worker.py
tauri-app/: package-lock.json  package.json
tauri-app/src/: App.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/components/: DownloadForm.tsx  ProgressCard.tsx  Sidebar.tsx
tauri-app/src/components/ui/: badge.tsx  button.tsx  input.tsx  scroll-area.tsx  select.tsx  separator.tsx
tauri-app/src/lib/: types.ts  utils.ts
